<resources>
    <string name="app_name">TaskManagerClient</string>
    <string name="action_settings">Settings</string>
    <string name="DefaultString">default</string>

    <!-- MainActivity -->
    <string name="main_lblDomainName">Domain Name</string>
    <string name="main_lblKeyword">Keyword</string>
    <string name="main_btnConnect">Connect</string>

    <!-- TasksActivity -->
    <string name="tasks_btnInformation">Information</string>
    <string name="tasks_btnTasks">Tasks</string>
    <string name="tasks_btnRun">Run Process</string>
    <string name="tasks_btnScreenShot">Screen Shot</string>
    <string name="tasks_btnKillProcess">Kill Process</string>
    <string name="tasks_btnShutdown">Shutdown</string>
    <string name="tasks_btnDisconnect">Disconnect</string>

    <!-- RunActivity -->
    <string name="run_lblCommand">Open</string>
    <string name="run_btnOK">OK</string>
    <string name="run_btnCancel">Cancel</string>
    <string name="title_activity_navi">NaviActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <!-- fragment_info.xml -->
    <string name="inf_lblRemoteStatus">Remote Status</string>
    <string name="inf_lblCPU">CPU</string>
    <string name="inf_lblMemory">Memory</string>
    <string name="inf_lblDisk">Disk</string>
    <string name="inf_lblNetwork">Network</string>
    <string name="inf_lblDomainName">Domain Name</string>
    <string name="inf_lblKeyword">Keyword</string>

    <!-- fragment_process.xml -->
    <string name="pro_ProcessName">Process Name</string>
    <string name="pro_ProcessID">Process ID</string>
    <string name="pro_btnOK">OK</string>
    <string name="pro_RunProcess">Run process</string>
    <string name="pro_KillProcess">Kill process</string>
    <string name="title_activity_screenshot">Screenshot</string>
</resources>
