<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.itx351.taskmanagerclient.TasksActivity">

    <!-- TODO: Replace this widget by Table widget? -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_btnShutdown"
        android:id="@+id/tasks_btnShutdown"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_btnKillProcess"
        android:id="@+id/tasks_btnKillProcess"
        android:layout_above="@+id/tasks_btnShutdown"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_btnDisconnect"
        android:id="@+id/tasks_btnDisconnect"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_btnScreenShot"
        android:id="@+id/tasks_btnScreenShot"
        android:layout_above="@+id/tasks_btnDisconnect"
        android:layout_alignRight="@+id/tasks_btnDisconnect"
        android:layout_alignEnd="@+id/tasks_btnDisconnect" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_btnRun"
        android:id="@+id/tasks_btnRun"
        android:layout_above="@+id/tasks_btnKillProcess"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
