<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.itx351.taskmanagerclient.RunActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_lblCommand"
        android:id="@+id/run_lblCommand"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/run_txtCommand"
        android:inputType="text"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_btnOK"
        android:id="@+id/tasks_btnDisconnect"
        android:layout_below="@+id/run_txtCommand"
        android:layout_toLeftOf="@+id/run_btnCancel"
        android:layout_toStartOf="@+id/run_btnCancel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_btnCancel"
        android:id="@+id/run_btnCancel"
        android:layout_alignTop="@+id/tasks_btnDisconnect"
        android:layout_alignRight="@+id/run_txtCommand"
        android:layout_alignEnd="@+id/run_txtCommand" />
</RelativeLayout>
